--- a/src/Components/Services.css
+++ b/src/Components/Services.css
@@ -22,6 +22,9 @@
     flex-wrap: wrap;
     gap: 40px;
 }
+.link-service {
+    text-decoration: none;
+}
 @media screen and (max-width: 768px) {
     .services {
         padding: 80px 40px;
